nested/bastionServer.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "bastionServerSettings": {
            "type": "object"
        },
        "networkSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        },
        "fortigateFirewallSettings": {
            "type": "object"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('networkSettings').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet1Name)]",
        "subnet2Ref": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet2Name)]",
        "sshKeyPath": "[concat('/home/',parameters('fortigateFirewallSettings').adminUsername,'/.ssh/authorized_keys')]",
        "osProfilepassword": {
            "computerName": "[parameters('fortigateFirewallSettings').FortiGateName]",
            "adminUsername": "[parameters('fortigateFirewallSettings').adminUsername]",
            "adminPassword": "[parameters('fortigateFirewallSettings').adminPassword]"
        },
        "osProfilesshPublicKey": {
            "computerName": "[parameters('fortigateFirewallSettings').FortiGateName]",
            "adminUsername": "[parameters('fortigateFirewallSettings').adminUsername]",
            "adminPassword": "[parameters('fortigateFirewallSettings').adminPassword]",
            "linuxConfiguration": {
                "disablePasswordAuthentication": true,
                "ssh": {
                    "publicKeys": [
                        {
                            "path": "[variables('sshKeyPath')]",
                            "keyData": "[parameters('fortigateFirewallSettings').sshKey]"
                        }
                    ]
                }
            }
        },
        "osProfileReference": "[variables(concat('osProfile', parameters('fortigateFirewallSettings').authenticationType))]"
    },
    "resources": [
        {
            "name": "[parameters('bastionServerSettings').bastionDiagStgAcnt]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('bastionServerSettings').bastionNic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('bastionServerSettings').publicIpAddressName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('bastionServerSettings').networkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('bastionServerSettings').publicIpAddressName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionServerSettings').networkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('bastionServerSettings').publicIpAddressName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('bastionServerSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('bastionServerSettings').bastionDnsLabelPrefix]"
                }
            }
        },
        {
            "name": "[parameters('bastionServerSettings').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "Internet",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5985",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('bastionServerSettings').bastionVMName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('bastionServerSettings').bastionNic)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('bastionServerSettings').bastionDiagStgAcnt)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('bastionServerSettings').bastionVMName]",
                    "adminUsername": "[parameters('bastionServerSettings').adminUsername]",
                    "adminPassword": "[parameters('bastionServerSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('bastionServerSettings').bastionVMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('bastionServerSettings').publisher]",
                        "offer": "[parameters('bastionServerSettings').offer]",
                        "sku": "[parameters('bastionServerSettings').sku]",
                        "version": "[parameters('bastionServerSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('bastionServerSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('bastionServerSettings').bastionNic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('bastionServerSettings').bastionDiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('bastionServerSettings').bastionVMName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('bastionServerSettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('bastionServerSettings').bastionVMName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('bastionServerSettings').fileUris]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File psscript.ps1',' ',parameters('bastionServerSettings').domainName,' ',parameters('bastionServerSettings').Username,' ',parameters('bastionServerSettings').Password)]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('bastionServerSettings').bastionVMName,'/InstallationDSA2')]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('bastionServerSettings').bastionVMName,'/extensions/CustomScriptExtension')]"
            ],
            "scale": null,
            "properties": {
                "publisher": "TrendMicro.DeepSecurity",
                "type": "TrendMicroDSA",
                "typeHandlerVersion": "10.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "DSMname": "[parameters('bastionServerSettings').ManagerAddress]",
                    "DSMport": "[parameters('bastionServerSettings').ActivationPort]",
                    "policyNameorID": ""
                },
                "protectedSettings": {
                    "tenantID": "[parameters('bastionServerSettings').TenantIdentifier]",
                    "tenantPassword": "[parameters('bastionServerSettings').TenantActivationPassword]"
                }
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "PowerBIInstall",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('bastionServerSettings').bastionVMName,'/extensions/InstallationDSA2')]"
            ],
            "properties": {
                "mode": "incremental",
                "templateLink": {
                    "uri": "[parameters('bastionServerSettings').powerBIUrl]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "bastionServerSettings": {
                        "value": "[parameters('bastionServerSettings')]"
                    },
                    "apiVersions": {
                        "value": "[parameters('apiVersions')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[parameters('fortigateFirewallSettings').fortiAvailName]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('fortigateFirewallSettings').location]",
            "properties": {
                "platformFaultDomainCount": "2",
                "platformUpdateDomainCount": "2"
            },
            "sku": {
                "name": "Aligned"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('fortigateFirewallSettings').fortiPublicIPAddressName]",
            "apiVersion": "[parameters('apiVersions').routtableApiVersion]",
            "location": "[parameters('fortigateFirewallSettings').location]",
            "properties": {
                " publicIPAllocationMethod": "[parameters('fortigateFirewallSettings').publicIPAddressType]"
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').routtableApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('fortigateFirewallSettings').fortiNicName1]",
            "location": "[parameters('fortigateFirewallSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('fortigateFirewallSettings').fortiPublicIPAddressName)]"
            ],
            "dependsOn": [],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('fortigateFirewallSettings').FGPubFacingAddress]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            " publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('fortigateFirewallSettings').fortiPublicIPAddressName)]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').routtableApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('fortigateFirewallSettings').fortiNicName2]",
            "location": "[parameters('fortigateFirewallSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('fortigateFirewallSettings').fortiPublicIPAddressName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('fortigateFirewallSettings').FGDMZAddress]",
                            "subnet": {
                                "id": "[variables('subnet2Ref')]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('fortigateFirewallSettings').FortiGateName]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('fortigateFirewallSettings').location]",
            "plan": {
                "name": "[parameters('fortigateFirewallSettings').name]",
                "publisher": "[parameters('fortigateFirewallSettings').publisher]",
                "product": "[parameters('fortigateFirewallSettings').product]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('fortigateFirewallSettings').fortiNicName1)]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('fortigateFirewallSettings').fortiNicName2)]",
                "[concat('Microsoft.Compute/availabilitySets/', parameters('fortigateFirewallSettings').fortiAvailName)]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('fortigateFirewallSettings').vmSize]"
                },
                "availabilitySet": {
                    "id":"[resourceId('Microsoft.Compute/availabilitySets', parameters('fortigateFirewallSettings').fortiAvailName)]"
                },
                "osProfile": "[variables('osProfileReference')]",
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('fortigateFirewallSettings').publisher]",
                        "offer": "[parameters('fortigateFirewallSettings').product]",
                        "sku": "[parameters('fortigateFirewallSettings').name]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage"
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": "30",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "properties": {
                                "primary": true
                            },
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('fortigateFirewallSettings').fortiNicName1)]"
                        },
                        {
                            "properties": {
                                "primary": false
                            },
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('fortigateFirewallSettings').fortiNicName2)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('bastionServerSettings').bastionDiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        }
    ],
    "outputs": {
        "bastionFQDN": {
            "type": "string",
            "value": "[reference(parameters('bastionServerSettings').publicIpAddressName).dnsSettings.fqdn]"
        }
    }
}
